force-app/main/default/objects/Lead_Form__c/Lead_Form__c.object-meta.xml
<CustomObject>
    <label>Lead Form</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>