force-app/main/default/objects/Lead_Form__c/fields/Average_Monthly_Electric_Bill__c.field-meta.xml
<CustomField>
    <fullName>Average_Monthly_Electric_Bill__c</fullName>
    <label>Average Monthly Electric Bill</label>
    <length>255</length>
    <type>Text</type>
</CustomField>