force-app/main/default/objects/Lead_Form__c/fields/Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Date_Stamp__c</fullName>
    <label>Date Stamp</label>
    <type>Date</type>
</CustomField>