force-app/main/default/objects/Lead_Form__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Last Log Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>DNC</fullName>
            </value>
            <value>
                <fullName>Has Provider</fullName>
            </value>
            <value>
                <fullName>No English</fullName>
            </value>
            <value>
                <fullName>Not Homeowner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>