force-app/main/default/objects/Lead_Form__c/fields/Roof_Type__c.field-meta.xml
<CustomField>
    <fullName>Roof_Type__c</fullName>
    <label>Roof Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>