force-app/main/default/objects/Lead_Form__c/fields/Utility_Bill__c.field-meta.xml
<CustomField>
    <fullName>Utility_Bill__c</fullName>
    <label>Utility Bill</label>
    <length>255</length>
    <type>Text</type>
</CustomField>