force-app/main/default/objects/Lead_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Street__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Zip__c</columns>
    <columns>Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>