force-app/main/default/objects/Lead_Form__c/listViews/Created_9_30_20.listView-meta.xml
<ListView>
    <fullName>Created_9_30_20</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Street__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Zip__c</columns>
    <columns>Phone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Created 9.30.20 and greater</label>
</ListView>